--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
-# $Id: Changes,v 1.3 2002/09/10 21:38:16 alester Exp $
+# $Id: Changes,v 1.7 2002/09/13 20:16:47 alester Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.31	September 13, 2002
+	[ENHANCEMENTS]
+	* get() now returns the HTTP::Response object.
+	* Prepended push_page_stack(), pop_page_stack() and
+	  do_request() with underscores, to emphasize that they 
+	  are for internal use only.
 
 0.30	September 10, 2002
 	[ENHANCEMENTS]
@@ -11,5 +18,10 @@ Revision history for Perl extension WWW::Mechanize
 	* get() doesn't work w/relative URLs
 	http://rt.cpan.org/NoAuth/Bug.html?id=1492
 
+	* The arrays returned by extract_links()
+	now have a third element, which contains
+	the name attribute of the link (undef
+	if the link has no name attribute).
 
-Code before this point is forked off from WWW::Automated 0.20b.
+
+Code before this point is forked off from WWW::Automate 0.20b.
