--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
-# $Id: Changes,v 1.9 2002/10/24 04:04:37 alester Exp $
+# $Id: Changes,v 1.12 2003/01/16 15:58:16 alester Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.33	January 15, 2003
+	[ENHANCEMENTS]
+	* Added accessor methods
+	* Deprecated the direct accessing of object contents.  You can
+	  no longer rely on the names of any of the hash elements.
+	* Added a quiet() method to suppress warnings to the screen.
+
+	[FIXES]
+	* More documentation fixes.  (Thanks to Briac Pilpré)
 
 0.32	September 23, 2002
 	[FIXES]
