--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
-# $Id: Changes,v 1.1 2003/06/13 15:46:42 petdance Exp $
+# $Id: Changes,v 1.2 2003/06/17 03:54:52 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.45	June 11, 2003
 	[ENHANCEMENTS]
+	* Added response() method, which is identical to res().
 	* Added a convenience method success(), which is just a wrapper
 	  around $agent->res->is_success().
 	* Passes along a Referer: header.  It can still be overridden
