The uri() only gets set if the operation was successful

--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
-# $Id: Changes,v 1.4 2003/06/17 22:11:42 petdance Exp $
+# $Id: Changes,v 1.5 2003/06/19 14:53:44 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.46
 	[ENHANCEMENTS]
+	* The uri() will only be the URI of the requested page if it worked.
 	* Oh yes, I forgot to mention: We're on Sourceforge now.
 
 0.45	June 11, 2003
