Releasing version 0.47; squawks if follow_link has a n=>"all"

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.9 2003/06/22 03:18:15 petdance Exp $
+# $Id: Changes,v 1.10 2003/06/22 03:49:38 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.47
+0.47	June 21, 2003
 	[ENHANCEMENTS]
 	* find_link() now lets you pass n=>"all" to get back a list
 	  of all links that match the other criteria.
