--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.12 2003/06/22 18:37:51 petdance Exp $
+# $Id: Changes,v 1.13 2003/06/22 18:46:52 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.48
+0.48	June 22, 2003
 	[ENHANCEMENTS]
 	* Added find_all_links() as the counterpart to find_link().
 
