--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
-# $Id: Changes,v 1.44 2003/07/24 17:16:29 petdance Exp $
+# $Id: Changes,v 1.45 2003/07/31 14:05:59 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.57	
+	[ENHANCEMENTS]
+	* Added <AREA HREF=...> tags to those that are links per
+	  find_links().
 
 0.56    July 24, 2003  12:15pm
 	[THINGS THAT MIGHT BREAK YOUR CODE]
