--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
-# $Id: Changes,v 1.46 2003/08/01 04:21:47 petdance Exp $
+# $Id: Changes,v 1.47 2003/08/08 17:18:38 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.58
+	[FIXES]
+	* The <AREA>-handling in extract_links() was incorrectly
+	  building the text.
 
 0.57	July 31, 2003  11:21pm
 	[ENHANCEMENTS]
