--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.56 2003/09/04 04:51:14 petdance Exp $
+# $Id: Changes,v 1.57 2003/09/04 05:10:35 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.59
+0.59	September 3, 2003  11:56pm
 	[FIXES]
 	* Squelched a warning in follow() where it tries to do a regex
 	  match against an undef value.
@@ -11,6 +11,8 @@ Revision history for Perl extension WWW::Mechanize
 
 	[ENHANCEMENTS]
 	* Added the mech-dump script, which replaces mech-forms.
+	  It will dump forms and lists of links.  Eventually it will
+	  do lists of images, too, but not yet.
 
 0.58	August 14, 2003  11:30pm
 	[THINGS THAT MIGHT BREAK YOUR CODE]
