--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
-# $Id: Changes,v 1.57 2003/09/04 05:10:35 petdance Exp $
+# $Id: Changes,v 1.58 2003/09/23 02:20:57 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.60
+	[FIXES]
+	* Changed how t/failure.t tries to fail.  It used to hit
+	  a bogus hostname in .com, but with Verisign doing its
+	  SiteFinder crap, even bogus addresses in .com succeed.
 
 0.59	September 3, 2003  11:56pm
 	[FIXES]
