--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
-# $Id: Changes,v 1.73 2003/10/13 19:57:07 petdance Exp $
+# $Id: Changes,v 1.74 2003/10/14 03:21:01 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.64
+	[ENHANCEMENTS]
+	* Many new tests, based on the excellent coverage reporting
+	  created by Paul Johnson's Devel::Cover module.
 
 0.63	October 13, 2003  2:56pm
 	[ENHANCEMENTS]
