--- a/Changes
+++ b/Changes
@@ -1,11 +1,18 @@
-# $Id: Changes,v 1.76 2003/10/24 04:17:20 petdance Exp $
+# $Id: Changes,v 1.77 2003/10/24 04:48:34 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.64	October 23, 2003  11:15pm
-	* If you have an <A> tag that does an onClick that opens a
-	  window, Mech will find the URL from that and make that be
-	  the link for the tag.  This is for things like Movable Type
-	  that pop little windows to rebuild indexes.
+	* The start of JavaScript support, sort of! 
+	
+	  If you have an <A> tag that does an onClick that opens a
+	  window, Mech will find the URL from that and make that
+	  be the link for the tag.  This is for things like Movable
+	  Type that pop little windows to rebuild indexes.
+
+	  This is subject to change in the future.  I don't know
+	  if it will, but I'm not making promises.  It might be so
+	  buggy I just yank the whole thing.
+
 	* Big jump in requirements, since we'll soon be using Gisle's
 	  new HTML::Form stuff.  Also, older versions of HTML::Form
 	  don't give output I'm expecting.
