--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.79 2003/11/09 18:41:45 petdance Exp $
+# $Id: Changes,v 1.80 2003/11/10 06:13:36 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.65
+0.65	Mon Nov 10 00:11:06 CST 2003
 	[ENHANCEMENTS]
 	* Made a _parse_html() method that you can override or call
 	  manually, per request from Gavin Estey.
@@ -11,8 +11,15 @@ Revision history for Perl extension WWW::Mechanize
 	  they work correctly under Windows.
 	* "make clean" cleans up temp flag files.
 
+	[INTERNALS]
+	* Uses the new Test::Pod 1.00 for simplicity.
+
 
 0.64	October 23, 2003  11:15pm
+	[ENHANCEMENTS]
+	* Many new tests, based on the excellent coverage reporting
+	  created by Paul Johnson's Devel::Cover module.
+
 	* The start of JavaScript support, sort of! 
 	
 	  If you have an <A> tag that does an onClick that opens a
@@ -30,10 +37,6 @@ Revision history for Perl extension WWW::Mechanize
 
 	[FIXES]
 	* Fixed the t/mech-dump.t failure.
-
-	[ENHANCEMENTS]
-	* Many new tests, based on the excellent coverage reporting
-	  created by Paul Johnson's Devel::Cover module.
 
 0.63	October 13, 2003  2:56pm
 	[ENHANCEMENTS]
