--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
-# $Id: Changes,v 1.86 2003/11/26 04:57:09 petdance Exp $
+# $Id: Changes,v 1.87 2003/11/26 05:15:36 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
-0.70	
+0.69_01 Tue Nov 25 23:12:51 CST 2003
 	[THINGS THAT MAY BREAK YOUR CODE]
 	* Redirects are now handled better by LWP, so the code that
 	  changes POSTs to GETs on redirects has been removed.
