Removed the conditional stuff for Carp.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
-# $Id: Changes,v 1.87 2003/11/26 05:15:36 petdance Exp $
+# $Id: Changes,v 1.88 2003/11/29 20:39:56 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
+
+0.69_03
+
+	[INTERNALS]
+	* Removed all the checking for Carp.  I don't know why I
+	  was thinking that Carp wasn't core. RT #4523.
 
 0.69_01 Tue Nov 25 23:12:51 CST 2003
 	[THINGS THAT MAY BREAK YOUR CODE]
